# kid-computer

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  ENGINEERING-BASELINE.md  ENVIRONMENT.md  LICENSE  Makefile  README.md  app_entry.py  build.ps1  dev.cmd  dev.ps1  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/adr/: 0001-windows-desktop-deviation.md  0002-procedural-audio-and-graphics.md  0003-public-repo-and-self-update.md  0004-themes-age-modes-and-settings.md
kidcomputer/: __init__.py  __main__.py  app.py  audio.py  buildinfo.py  config.py  display.py  effects.py  exit_watcher.py  focus_guard.py  keyboard_lock.py  logging_setup.py  modes.py  render.py  scene.py  settings_panel.py  theme.py  touchpad.py  updater.py
tests/: conftest.py  test_audio.py  test_buildinfo.py  test_exit_watcher.py  test_focus_guard.py  test_keyboard_lock.py  test_render.py  test_settings_panel.py  test_settings_store.py  test_theme_modes.py  test_updater.py
